Fix for JIRA issue SB-5825
The line height default value of 48px seems too much. Reduced to 40px.

--- a/renderer/styles/style.css
+++ b/renderer/styles/style.css
@@ -77,6 +77,7 @@
 
 .ftb-question-text {
   text-align:left;
+  line-height: 40px;
 }
 
 .align-question {
